spring-petclinic/petclinic-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-iter8
  labels:
    istio-injection: enabled
